--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -7,12 +7,20 @@ COMPATIBILITY:
   - "ie >= 9"
   - "ios >= 7"
 
+FOUNDATION_THEME: "classic"
+
+ENABLE_FOUNDATION_ICON_FONTS: true
+
 # Foundation source directories.
 PATHS:
+  
   # Paths to Sass libraries, which can then be loaded with @import
   sass:
     - "bower_components/foundation-sites/scss"
     - "bower_components/motion-ui/src"
+    - "bower_components/foundation-themes/classic/source/scss"
+    - "bower_components/foundation-icon-fonts"
+  
   # Paths to JavaScript libraries, which are combined into one file
   javascript:
     # Libraries required by Foundation
@@ -23,26 +31,26 @@ PATHS:
     - "bower_components/foundation-sites/js/foundation.util.*.js"
     # Individual Foundation components
     # If you aren't using a component, just remove it from the list
-    - "bower_components/foundation-sites/js/foundation.abide.js"
-    - "bower_components/foundation-sites/js/foundation.accordion.js"
-    - "bower_components/foundation-sites/js/foundation.accordionMenu.js"
-    - "bower_components/foundation-sites/js/foundation.drilldown.js"
-    - "bower_components/foundation-sites/js/foundation.dropdown.js"
+    # - "bower_components/foundation-sites/js/foundation.abide.js"
+    # - "bower_components/foundation-sites/js/foundation.accordion.js"
+    # - "bower_components/foundation-sites/js/foundation.accordionMenu.js"
+    # - "bower_components/foundation-sites/js/foundation.drilldown.js"
+    # - "bower_components/foundation-sites/js/foundation.dropdown.js"
     - "bower_components/foundation-sites/js/foundation.dropdownMenu.js"
-    - "bower_components/foundation-sites/js/foundation.equalizer.js"
-    - "bower_components/foundation-sites/js/foundation.interchange.js"
-    - "bower_components/foundation-sites/js/foundation.magellan.js"
-    - "bower_components/foundation-sites/js/foundation.offcanvas.js"
-    - "bower_components/foundation-sites/js/foundation.orbit.js"
+    # - "bower_components/foundation-sites/js/foundation.equalizer.js"
+    # - "bower_components/foundation-sites/js/foundation.interchange.js"
+    # - "bower_components/foundation-sites/js/foundation.magellan.js"
+    # - "bower_components/foundation-sites/js/foundation.offcanvas.js"
+    # - "bower_components/foundation-sites/js/foundation.orbit.js"
     - "bower_components/foundation-sites/js/foundation.responsiveMenu.js"
     - "bower_components/foundation-sites/js/foundation.responsiveToggle.js"
-    - "bower_components/foundation-sites/js/foundation.reveal.js"
-    - "bower_components/foundation-sites/js/foundation.slider.js"
-    - "bower_components/foundation-sites/js/foundation.sticky.js"
+    # - "bower_components/foundation-sites/js/foundation.reveal.js"
+    # - "bower_components/foundation-sites/js/foundation.slider.js"
+    # - "bower_components/foundation-sites/js/foundation.sticky.js"
     - "bower_components/foundation-sites/js/foundation.tabs.js"
-    - "bower_components/foundation-sites/js/foundation.toggler.js"
-    - "bower_components/foundation-sites/js/foundation.tooltip.js"
-    - "bower_components/foundation-sites/js/foundation.zf.responsiveAccordionTabs.js"
+    # - "bower_components/foundation-sites/js/foundation.toggler.js"
+    # - "bower_components/foundation-sites/js/foundation.tooltip.js"
+    # - "bower_components/foundation-sites/js/foundation.zf.responsiveAccordionTabs.js"
     # Files in `/source`
     - "../source/js/app.js"
     - "../source/js/!(app).js"
