--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,7 +6,9 @@
     "type": "git",
     "url": "https://github.com/Tri4ce/hugo-theme-jgarfield.git"
   },
-  "keywords": [ "hugo" ],
+  "keywords": [
+    "hugo"
+  ],
   "author": "Justin Garfield",
   "license": "MIT",
   "devDependencies": {
@@ -27,6 +29,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.7",
     "js-yaml": "^3.4.6",
+    "metaimages": "0.0.2",
     "rimraf": "^2.4.3",
     "yargs": "^3.8.0"
   },
